css/styles.css
@charset "UTF-8"; /* Set charset UTF-8 */

/* 
    css/styles.css
    Author: Jordan Hay

    Description

        General styles for the entire website.

*/

/* Import Fonts */
@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap'); 

/* Every Element (Ones below will overide if need be) */
* { 
    font-family: 'Roboto', sans-serif;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

/* General Styles */

body, html {
    margin: 0;
    padding: 0;
}

html {
    margin-bottom: 200px;
}

body {
    overflow-x: hidden;
}

h1 {
    font-size: 25pt;
}

h1, h2, h3, h4, h5, h6 {
    color: #003500;
}

a {
    color: inherit;
    text-decoration: underline;
}

hr {
    width: 100%;
}

.float-right {
    float: right;
}

/* /General styles */

/* Responsive */

/* Mobile */
[class*="col-"] {
    width: 100%;
    float: left;
}

.row-s {
    display: flex;
    flex-flow: row;
    width: 100%;
    padding: 0;
    margin: 0;
}

.row {
    width: 100%;
    display: inline-block;
    padding: 0;
    margin: 0;
}

.mobile-only {
    display: inline-block;
}

.desktop-only {
    display: none;
}

/* Columns even on mobile */

.col-s-1 {width: 8.33%;}
.col-s-2 {width: 16.66%;}
.col-s-3 {width: 25%;}
.col-s-4 {width: 33.33%;}
.col-s-5 {width: 41.66%;}
.col-s-6 {width: 50%;}
.col-s-7 {width: 58.33%;}
.col-s-8 {width: 66.66%;}
.col-s-9 {width: 75%;}
.col-s-10 {width: 83.33%;}
.col-s-11 {width: 91.66%;}
.col-s-12 {width: 100%;}
  
/* Desktop */
@media only screen and (min-width: 768px) {
    [class*="col-"] {min-height: 1px;}
    .col-1 {width: 8.33%;}
    .col-2 {width: 16.66%;}
    .col-3 {width: 25%;}
    .col-4 {width: 33.33%;}
    .col-5 {width: 41.66%;}
    .col-6 {width: 50%;}
    .col-7 {width: 58.33%;}
    .col-8 {width: 66.66%;}
    .col-9 {width: 75%;}
    .col-10 {width: 83.33%;}
    .col-11 {width: 91.66%;}
    .col-12 {width: 100%;}
    .row {
        display: flex;
        flex-flow: row;
    }
    .mobile-only {display: none;}
    .desktop-only {display: inline-block;}
}

/* /Responsive */

/* Header */

header {
    height: 300px;
    background-size: cover;
    background-position: center center;
}

header * {
    display: block;
    position: relative;
    top: 45px;
    filter: brightness(0) invert(1) drop-shadow(0px 0px 3px RGBA(0, 0, 0, 0.75));
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

header img {
    display: block;
    height: 150px;
}

/* /Header */

/* Nav */

nav {
    border-bottom: 3px solid #003500;
    background-color: white;
    z-index: 9999; /* This was the only way I could get the nav to appear above the map controls*/
    height: 60px;
    display: inline-block;
    transition: 0.3s ease all;
    padding: 0;
    text-align: center;
}

nav a {
    text-decoration: none;
    color: black;
    padding: 20px;
    transition: 0.3s ease all;
    position: relative;
    top: 20px;
    color: #003500;
}

nav a:hover {
    opacity: 0.8;
    text-decoration: none;
    background-color: RGBA(0, 0, 0, 0.05);
}

nav a.active {
    background-color: #003500;
    color: white;
    transition: 0.3s ease all;
}

nav a.active:hover {
    opacity: 1; 
    cursor: default;
}

nav.stick {
    position: fixed;
    top: 0;
}

#nav-responsive-button {
    display: none;
}

/* Mobile nav */
@media screen and (max-width: 768px) {

    nav {
        height: 60px;
        margin: 0;
        transition: 0.3s ease all;
        overflow: hidden;
    }

    nav a {
        position: relative;
        top: 0;
        padding: 20px;
        margin: 0;
        width: 100vw;
        display: block;
        height: 60px;
    }

    nav a:last-child {
        margin-bottom: -42px;
    }

    #nav-responsive-button {
        display: block; 
        position: relative;
    }
}

/* /Nav */

/* Content */

#content {
    padding: 10px;
    transition: 0.3s ease all;
}

/* Buttons */

.button {
    color: white;
    background-color: #003500;
    border-left: none;
    padding: 10px;
    text-decoration: none;
    margin: 10px;
    margin-left: 0;
    transition: 0.3s ease all;
    border-radius: 4px;
}

.button:hover {
    opacity: 0.8;
    cursor: pointer;
}

/* Tables */

table, th, td {
    border-collapse: collapse;
}

tr td {
    transition: 0.3s ease all;
}

/* Curvy edges on the table corners */
tr:first-child th:first-child {
    border-top-left-radius: 4px;
}

tr:first-child th:last-child {
    border-top-right-radius: 4px;
}

tr:last-child td:first-child {
    border-bottom-left-radius: 4px;
}

tr:last-child td:last-child {
    border-bottom-right-radius: 4px;
}

tr {
    background-color: RGBA(0, 0, 0, 0.01);
}

tr:nth-child(odd) {
    background-color: RGBA(0, 0, 0, 0.05);
}

tr:hover td {
    background-color: RGBA(0, 0, 0, 0.07);
    cursor: pointer;
}

/* Table headers and data */
th, td {
    padding: 10px;
    text-align: center;
}

th {
    color: white;
    background-color: #003500;
    font-weight: 100;
}

td:first-child {
    text-align: left;
}

/* Trail Maps */

#trail-map {
    margin: 20px 0px;
    border-radius: 4px;
}

/* Forms */

fieldset, .form-wrapper {
    padding: 10px;    
}

fieldset {
    border: 1px solid lightgray;
    border-radius: 4px;
}

fieldset:not(:first-child) {
    margin-top: 20px;
}

label:not(:first-child) {
    margin-top: 10px;
}

form {
    margin-bottom: 30px;
}

input, textarea[type=text] {
    padding: 14px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid lightgray;
    border-radius: 4px;
    box-sizing: border-box;
    margin-left: 0;
    resize: none;
    font-size: 11.5pt;
    background-color: RGBA(0, 0, 0, 0);
}

input[type=submit], button[type=submit] {
    color: white;
    padding: 14px 20px;
    width: 100%;
    margin-top: 19px;
    font-size: 12pt;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: 0.3s ease;
    background-color: #003500;
}

input[type=submit]:hover {
    opacity: 0.9;
}

/* Parsley CSS */

input.parsley-success, select.parsley-success, textarea.parsley-success {
    color: #468847;
    background-color: #DFF0D8;
    border: 1px solid #D6E9C6;
}

input.parsley-error, select.parsley-error, textarea.parsley-error {
    color: #B94A48;
    background-color: #F2DEDE;
    border: 1px solid #EED3D7;
}

.parsley-errors-list {
    margin: 2px 0 3px;
    padding: 0;
    list-style-type: none;
    font-size: 0.9em;
    line-height: 0.9em;
    opacity: 0;
    color: #B94A48;

    transition: all .3s ease-in;
    -o-transition: all .3s ease-in;
    -moz-transition: all .3s ease-in;
    -webkit-transition: all .3s ease-in;
}

.parsley-errors-list.filled {
    opacity: 1;
}

/* /Form */

/* Specific page styles */

/* Search Style */

.navigate-result {
    position: relative;
    top: 30px;
}

.navigate-result.float-right {
    position: relative;
    top: 10px;
}

/* Trail Styles */

#page-title.trail {
    display: none;
}

#trail-img {
    background-size: cover;
}

/* /Specific page styles */

/* Footer */

footer {
    width: 100%;
    z-index: 9999; /* This was the only way I could get the nav to appear above the map controls*/
    text-align: center;
    position: fixed;
    bottom: 0;
    left: 0;
    background-color: black;
    color: white;
}

/* /Footer */

